refactor: 자바 버전 8로 변경