@@ -6,6 +6,7 @@ import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.stream.Collectors;
 import vendingmachine.constants.Coin;
 import vendingmachine.dto.ChangeDTO;
 
@@ -19,20 +20,25 @@ public class CoinManager {
     public void initCoin(int machineMoney) {
         Arrays.stream(Coin.values())
                 .forEach(val -> coinStatus.put(val, 0));
+
+        int finalMachineMoney = machineMoney;
+        List<Integer> candidateCoins = Arrays.stream(Coin.values())
+                .map(Coin::getValue)
+                .filter(value -> finalMachineMoney > value)
+                .collect(Collectors.toList());
+
         while (machineMoney != 0) {
-            machineMoney = generateCoins(machineMoney);
+            machineMoney = generateCoins(candidateCoins, machineMoney);
         }
     }
 
-    private int generateCoins(int machineMoney) {
-        List<Integer> available = Arrays.stream(Coin.values())
-                .map(Coin::getValue)
-                .filter(value -> machineMoney > value)
-                .toList();
-
-        int picked = Randoms.pickNumberInList(available);
+    private int generateCoins(List<Integer> candidateCoins, int machineMoney) {
+        int picked = Randoms.pickNumberInList(candidateCoins);
         int amount = machineMoney / picked;
-        coinStatus.replace(Coin.getCoinByValue(picked), amount);
+        Coin coin = Coin.getCoinByValue(picked);
+        if (coinStatus.get(coin) == 0) {
+            coinStatus.replace(Coin.getCoinByValue(picked), amount);
+        }
         return machineMoney - (picked * amount);
     }
 
@@ -45,7 +51,7 @@ public class CoinManager {
 
         List<Entry<Coin, Integer>> entries = coinStatus.entrySet()
                 .stream().filter(entry -> entry.getValue() != 0)
-                .toList();
+                .collect(Collectors.toList());
 
         for (Entry<Coin, Integer> entry : entries) {
             int amount = remain / entry.getKey().getValue();
